# FraudIntel

./: .gitignore  Dockerfile  LICENSE  README.md  TASKS.md
backend/: .env.example  Dockerfile  pyproject.toml  refactor.py  requirements.txt  scratch_test.py  test_all_agents.py
backend/agent/: __init__.py  config.py  database.py  main.py  mcp_client.py  orchestrator.py
backend/agent/prompts/: __init__.py  system_prompts.py
backend/agent/sub_agents/: __init__.py  auditor.py  compliance.py  evidence_gatherer.py  report_generator.py  risk_scorer.py  threat_intelligence.py
backend/agent/tools/: __init__.py  investigation_tools.py  mongodb_tools.py  scoring_tools.py
backend/api/: __init__.py  server.py
backend/api/models/: schemas.py
backend/api/routes/: dashboard.py  investigations.py
backend/data/: __init__.py  fraud_patterns.json  sample_scenarios.json  seed_data.py
backend/deploy/: cloudbuild.yaml  deploy.sh
docs/: USE_CASES.md  architecture.md  demo-script.md
frontend/: clear.html  index.html
frontend/css/: styles.css
frontend/js/: app.js  network-graph.js
