[project]
name = "fraudintel"
version = "1.0.0"
description = "AI Fraud Investigation Agent - Multi-agent system powered by Gemini and MongoDB"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.2.0",
    "google-cloud-aiplatform>=1.74.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pymongo>=4.10.0",
    "motor>=3.6.0",
    "httpx>=0.28.0",
]

[project.scripts]
fraudintel = "agent.main:main"
